--- a/requirements.txt
+++ b/requirements.txt
@@ -81,8 +81,7 @@ pyspark==3.2.1
 python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
-pywin32==301
-platform_system == "Windows"
+pywin32==301; platform_system == "Windows"
 pywinpty==1.1.6
 pyzmq==22.3.0
 qtconsole==5.2.1
