--- a/requirements.txt
+++ b/requirements.txt
@@ -76,13 +76,13 @@ pydeck==0.7.1
 Pygments==2.10.0
 Pympler==1.0.1
 pyparsing==3.0.6
-pypiwin32==223 #
+#pypiwin32==223 
 pyrsistent==0.18.0
 pyspark==3.2.1
-python-dateutil==2.8.2
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-pywin32==302 #
+#python-dateutil==2.8.2
+#pytz==2021.3
+#pytz-deprecation-shim==0.1.0.post0
+#pywin32==302 
 pywinpty==1.1.6
 pyzmq==22.3.0
 qtconsole==5.2.1
