--- a/requirements.txt
+++ b/requirements.txt
@@ -51,12 +51,12 @@ MarkupSafe==2.0.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
-nbclassic==0.3.4
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-nest-asyncio==1.5.4
-notebook==6.4.6
+#nbclassic==0.3.4
+#nbclient==0.5.9
+#nbconvert==6.3.0
+#nbformat==5.1.3
+#nest-asyncio==1.5.4
+#notebook==6.4.6
 numpy==1.21.4
 packaging==21.3
 pandas==1.3.4
@@ -85,21 +85,21 @@ pytz-deprecation-shim==0.1.0.post0
 #pywin32==302
 #pywinpty==1.1.6
 #pyzmq==22.3.0
-qtconsole==5.2.1
-QtPy==1.11.3
-regex==2022.3.2
+#qtconsole==5.2.1
+#QtPy==1.11.3
+#regex==2022.3.2
 requests==2.26.0
 scikit-learn==1.1.1
 scipy==1.7.3
 seaborn==0.11.2
-semver==2.13.0
+#semver==2.13.0
 Send2Trash==1.8.0
-six==1.16.0
-smmap==5.0.0
-sniffio==1.2.0
+#six==1.16.0
+#smmap==5.0.0
+#sniffio==1.2.0
 streamlit==1.9.0
-tenacity==8.0.1
-terminado==0.12.1
+#tenacity==8.0.1
+#terminado==0.12.1
 testpath==0.5.0
 threadpoolctl==3.1.0
 toml==0.10.2
@@ -110,11 +110,11 @@ tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.7
 validators==0.19.0
-watchdog==2.1.8
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.3
-widgetsnbextension==3.5.2
-wincertstore==0.2
-yarg==0.1.9
-zipp==3.8.0
+#watchdog==2.1.8
+#wcwidth==0.2.5
+#webencodings==0.5.1
+#websocket-client==1.2.3
+#widgetsnbextension==3.5.2
+#wincertstore==0.2
+#yarg==0.1.9
+#zipp==3.8.0
