--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ colorlover==0.3.0
 cufflinks==0.17.3
 cycler==0.11.0
 dateparser==1.1.1
-debugpy==1.5.1
+#debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
 docopt==0.6.2
@@ -50,18 +50,18 @@ kiwisolver==1.3.2
 MarkupSafe==2.0.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
-mistune==0.8.4
-#nbclassic==0.3.4
-#nbclient==0.5.9
-#nbconvert==6.3.0
-#nbformat==5.1.3
-#nest-asyncio==1.5.4
-#notebook==6.4.6
+#mistune==0.8.4.slugignore
+#nbclassic==0.3.4.slugignore
+#nbclient==0.5.9.slugignore
+#nbconvert==6.3.0.slugignore
+#nbformat==5.1.3.slugignore
+#nest-asyncio==1.5.4.slugignore
+#notebook==6.4.6.slugignore
 numpy==1.21.4
 packaging==21.3
 pandas==1.3.4
-pandocfilters==1.5.0
-parso==0.8.3
+#pandocfilters==1.5.0.slugignore
+#parso==0.8.3.slugignore
 pickleshare==0.7.5
 Pillow==8.4.0
 pipreqs==0.4.11
@@ -76,30 +76,30 @@ pydeck==0.7.1
 Pygments==2.10.0
 Pympler==1.0.1
 pyparsing==3.0.6
-#pypiwin32==223
-pyrsistent==0.18.0
+#pypiwin32==223.slugignore
+#pyrsistent==0.18.0
 pyspark==3.2.1
-python-dateutil==2.8.2
+#python-dateutil==2.8.2.slugignore
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
-#pywin32==302
-#pywinpty==1.1.6
-#pyzmq==22.3.0
-#qtconsole==5.2.1
-#QtPy==1.11.3
-#regex==2022.3.2
+#pywin32==302.slugignore
+#pywinpty==1.1.6.slugignore
+#pyzmq==22.3.0.slugignore
+#qtconsole==5.2.1.slugignore
+#QtPy==1.11.3.slugignore
+#regex==2022.3.2.slugignore
 requests==2.26.0
 scikit-learn==1.1.1
 scipy==1.7.3
 seaborn==0.11.2
-#semver==2.13.0
+#semver==2.13.0.slugignore
 Send2Trash==1.8.0
-#six==1.16.0
-#smmap==5.0.0
-#sniffio==1.2.0
+#six==1.16.0.slugignore
+#smmap==5.0.0.slugignore
+#sniffio==1.2.0.slugignore
 streamlit==1.9.0
-#tenacity==8.0.1
-#terminado==0.12.1
+#tenacity==8.0.1.slugignore
+#terminado==0.12.1.slugignore
 testpath==0.5.0
 threadpoolctl==3.1.0
 toml==0.10.2
@@ -110,11 +110,11 @@ tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.7
 validators==0.19.0
-#watchdog==2.1.8
-#wcwidth==0.2.5
-#webencodings==0.5.1
-#websocket-client==1.2.3
-#widgetsnbextension==3.5.2
-#wincertstore==0.2
-#yarg==0.1.9
-#zipp==3.8.0
+#watchdog==2.1.8.slugignore
+#wcwidth==0.2.5.slugignore
+#webencodings==0.5.1.slugignore
+#websocket-client==1.2.3.slugignore
+#widgetsnbextension==3.5.2.slugignore
+#wincertstore==0.2.slugignore
+#yarg==0.1.9.slugignore
+#zipp==3.8.0.slugignore
